--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
-  "name": "charts-in-react",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Alberto Restifo <arestifo@sentisis.com>",
-  "license": "MIT",
-  "scripts": {
-    "start": "cleaver watch --style ./theme/style.css charts-in-react.md",
-    "build": "cleaver charts-in-react.md"
+  "name": "examples",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "https://sentisis.github.io/charts-in-react",
+  "devDependencies": {
+    "react-scripts": "^1.0.14"
   },
   "dependencies": {
-    "cleaver": "^0.8.5",
-    "highlight.js": "^9.12.0"
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-request": "^1.0.6",
+    "d3-scale": "^1.0.6",
+    "d3-selection": "^1.1.0",
+    "d3-shape": "^1.2.0",
+    "d3-time-format": "^2.0.5",
+    "gh-pages": "^1.0.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
