--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
     "d3-ease": "^1.0.3",
+    "d3-interpolate": "^1.1.5",
     "d3-request": "^1.0.6",
     "d3-scale": "^1.0.6",
     "d3-selection": "^1.1.0",
     "d3-shape": "^1.2.0",
     "d3-time-format": "^2.0.5",
     "d3-timer": "^1.0.7",
+    "date-fns": "^1.29.0",
     "gh-pages": "^1.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
